--- a/Proyecto API/Proyecto API.csproj
+++ b/Proyecto API/Proyecto API.csproj
@@ -162,18 +162,27 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="Controllers\ActivoController.cs" />
+    <Compile Include="Controllers\AsientoController.cs" />
     <Compile Include="Controllers\ClasesController.cs" />
     <Compile Include="Controllers\ConciliacionController.cs" />
     <Compile Include="Controllers\CuentaContableController.cs" />
+    <Compile Include="Controllers\EstadoController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\UbicacionController.cs" />
     <Compile Include="Controllers\UsuariosController.cs" />
+    <Compile Include="Entities\ActivoEnt.cs" />
     <Compile Include="Entities\AsientoEnt.cs" />
+    <Compile Include="Entities\AsientoLineasEnt.cs" />
     <Compile Include="Entities\AuxiliarEnt.cs" />
     <Compile Include="Entities\CategoriaCuentaEnt.cs" />
     <Compile Include="Entities\ClaseEnt.cs" />
     <Compile Include="Entities\ConciliacionEnt.cs" />
     <Compile Include="Entities\CuentaContableEnt.cs" />
+    <Compile Include="Entities\EstadoEnt.cs" />
+    <Compile Include="Entities\UbicacionEnt.cs" />
     <Compile Include="Entities\UsuariosEnt.cs" />
+    <Compile Include="Entities\ValidacionClaseEnt.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -279,9 +288,13 @@
     <Compile Include="ModelDB\VALIDAR_USUARIO_Result.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\ActivoModel.cs" />
+    <Compile Include="Models\AsientoModel.cs" />
     <Compile Include="Models\ClasesModel.cs" />
     <Compile Include="Models\ConciliacionModel.cs" />
     <Compile Include="Models\CuentaContableModel.cs" />
+    <Compile Include="Models\EstadoModel.cs" />
+    <Compile Include="Models\UbicacionModel.cs" />
     <Compile Include="Models\UsuariosModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
